# qoi

./: .gitignore  Cargo.toml  LICENSE  develop.nu  flake.nix  rustfmt.toml
benches/: decode.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: pixel_mapping.rs  push_unchecked.rs
src/: constants.rs  decode.rs  error.rs  lib.rs  model.rs
